Updated V3 ---------- 1.Added Fall history activity.
-R

--- a/app/src/main/assets/webview/index.html
+++ b/app/src/main/assets/webview/index.html
@@ -1,7 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Free for personal and commercial use under the CCA 3.0 license
--->
 <html>
 	<head>
 		<title>'WATCH' OUT</title>
@@ -65,7 +62,7 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-dashboard">Control Panel</span></a></li>
-								<li><a href="#top" id="detection-manager" onClick="toAndroidFun()"><span class="icon fa-comments">Detection Manager</span></a></li>
+								<li><a href="#top" id="detection-manager" onClick="toAndroidFun()"><span class="icon fa-comments">Fall History</span></a></li>
 								<li><a href="#top" id="medication-reminder" onClick="toMedFun()"><span class="icon fa-medkit">Medication Reminder</span></a></li>
 								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-gears">Settings</span></a></li>
 							</ul>
